# risk-highlight-tool

./: .env.example  .gitignore  README.md  kernel_config.json  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
analysis/: layer1_copy_risk.ipynb
analysis/layer2_examples/: example_clean.py  example_risky.R
data/: .gitignore
data/agencies/: federal_agencies.yaml
data/documentation/: .gitignore  AI Output Claim and Risk Checker.docx  EVALUATION_PLAN_L1.md  FILE_STRUCTURE.md
data/patterns/: layer1_patterns.yaml
docs/: FILE_STRUCTURE.md  HANDOFF.md  LAYER1_CHANGELOG.md  LAYER4_SCOPE.md  OPEN_QUESTIONS.md  PATTERN_SOURCES.md
docs/archive/: AI_USE.md  AUDIT_TEMPLATE.md  BULLETPROOF_VISION.md  LAYER2_FLAGS.md  PROPOSAL.md  VETTING_REQUEST.md  layer2_code_risk.ipynb  layer2_code_risk_executed.ipynb  layer5_resources.yaml
docs/archive/layer2_examples/: example_risky.py
evaluation/: run_eval.py
evaluation/benchmark/: ANALYSIS.md  results.csv  run_benchmark.py  run_llm.py  score_benchmark.py  scored.csv  scores_summary.txt  snippets.csv
evaluation/gold/: layer1_gold.jsonl
risk_highlight/: ai_check.py  fact_check.py  layer1.py
tests/: test_layer1.py
ui/: layer1_app.py  layer2_app.py  layer2a_code_issues.py  layer2b_decision_points.py  layer3_app.py  layer5_app.py
