[tool.setuptools.packages.find]
where = ["."]
include = ["risk_highlight*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project]
name = "risk-highlight-tool"
version = "0.1.0"
description = "Risk highlighter for journalism copy, analysis code, and source notes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # NLP — Layer 1 flagging
    "pyyaml>=6.0",
    "rapidfuzz>=3.0.0",
    "spacy>=3.8.14",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    # AI — fact checking and review
    "openai>=1.0.0",
    # UI + storage
    "streamlit>=1.45.0",
    "supabase>=2.30.0",
    "python-dotenv>=1.0.0",
]
